--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>Balance</h1>
-      <span>0$</span>
+      <span id="balance">0$</span>
     </header>
     <section>
       <h3>Breakdown</h3>
@@ -30,7 +30,7 @@
     <footer>
       <input type="number" placeholder="0$" />
       <select name="" id="">
-        <option value="expense">+ Income</option>
+        <option value="income">+ Income</option>
         <option value="expense">- Expense</option>
       </select>
       <button>Add</button>
